# ICARUS-cpp-gstreamer-video_streamer

./: CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.ci.build.yaml  docker-compose.yaml  dockerfile  run.sh
entrypoints/: udpsrc_to_filesink.sh  v4l2src_to_multiudpsink.sh
src/: main.cpp
